# secure-qr-vcs-auth

./: README.md  docker-compose.yml  prompt.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  core_crypto.py  database.py  demo_roundtrip.py  entrypoint.sh  main.py  migrate.py  models.py  pyproject.toml  test_vcs.py
backend/migrations/: 001_add_ticket_fields.sql  002_add_check_in_code.sql
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  Navbar.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  Input.jsx
frontend/src/pages/: BuyPage.jsx  HomePage.jsx  VerifyPage.jsx
